# $Id$

2009-03-17	Denis M. Gabaidulin

	* main/Flow/HttpRequest.class.php: setServerVar() added.

	* main/Utils/DateUtils.class.php: alignToSeconds() added.
	Function used to align date for any interval.

2009-03-16	Denis M. Gabaidulin

	* core/Form/Filters/Json{Encoder|Decoder}Filter.class.php: added
	and tested.

2009-03-10	Vladlen Y. Koshelev

	* core/DB/PostgresError.class.php: removed internal numeric representation
	of error code.

	* core/DB/PgSQL.class.php,
	core/Exceptions/PostgresDatabaseException.class.php: PostgreSQL-specific
	exception containing string error code within (PostgresError constant). 

2009-03-06	Sergey S. Sergeev

	* main/Flow/MethodMappedController.class.php: import attached vars to form.
	
	* core/Base/Date.class.php, core/Base/Timestamp.class.php: bugfixed.

2009-03-06	Vladlen Y. Koshelev

	* core/Form/Primitives/PrimitiveIdentifier.class.php: actualImportValue()
	hook added.

2009-03-05	Vladlen Y. Koshelev

	* main/Flow/BaseEditor.class.php: ability to change default action added.

2009-03-04	Konstantin V. Arkhipov

	* core/Types/Date.class.php, core/Types/Timestamp.class.php: now
	internal integer's date representation are rounded to days during
	Date's import.

2009-02-26	Vladlen Y. Koshelev

	* core/DB/PostgresError.class.php, test/code/PostgresErrorTest.class.php:
	added conversion methods for internal numeric representation of error code
	(toCode(), getByCode(), checkCode()) and corresponding test.
	Thanks to Ivan Y. Khvostishkov.

	* core/DB/PgSQL.class.php: pass numeric error code value to
	DatabaseException.

2009-02-22	Konstantin V. Arkhipov

	* core/Form/Primitives/IdentifiablePrimitive.class.php: added
	setScalar() to control wheter identifier is really scalar one, this
	change restores old class' behavior.

	* core/Form/Primitives/PrimitiveIntegerIdentifier.class.php,
	core/Form/Primitives/PrimitiveScalarIdentifier.class.php: two
	identifier types introduced for forward compatibility with master.
